load_balancer.tf
resource "aws_lb" "load_balancer" {
  name               = "ecs-load-balancer"
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb_security_group.id]
  subnets            = [aws_subnet.subnet-a.id, aws_subnet.subnet-b.id, aws_subnet.subnet-c.id]
}

resource "aws_lb_listener" "load_balancer_listener" {
  load_balancer_arn = aws_lb.load_balancer.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    target_group_arn = aws_lb_target_group.load_balancer_target_group.arn
    type             = "forward"
  }
}
resource "aws_lb_target_group" "load_balancer_target_group" {
  name        = "ecs-target-group"
  target_type = "ip"
  port        = 8080
  protocol    = "HTTP"
  vpc_id      = aws_vpc.vpc.id
  health_check {
    matcher  = 401
    port     = 8080
    protocol = "HTTP"
  }
}
resource "aws_lb_listener_rule" "stickiness_policy" {
  listener_arn = aws_lb_listener.load_balancer_listener.arn
  action {
    type = "forward"
    forward {
      target_group {
        arn = aws_lb_target_group.load_balancer_target_group.arn
      }
      stickiness {
        duration = 600
        enabled = true
      }
    }
  }
  condition {
    
  }
 

}
